added date download

--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -100,16 +100,17 @@ The ribosome clearly has the potential to prefold motifs and small domains befor
 \subsection{Datasets}
 \subsubsection{7TM lists}
 The 7TMR list is a list distributed by UniProt containing G-receptor linked proteins available at \url{http://www.uniprot.org/docs/7tmrlist.txt} \cite{TheUniProtConsortium2014}.
-The entire list contains 3115 UniProt IDs which map to 3092 records.
+The entire list contains 3115 UniProt IDs which mapped to 3092 records on the date of download (12/9/2017).
 After removing redundant records using UniRef50 to identify cluster representitives, 1142 records made the final dataset.
 The original list is also sub categorised by function.
-Here, we also looked at opsins, the T2R taste receptors, frizzled/smooth \gls{gpcr}s, metabotropic gluatmate receptors (Family C) and serotonin receptors.
+Here, we also looked at opsins, the T2R taste receptors, frizzled/smooth \gls{gpcr}s, metabotropic gluatmate receptors (Family C), fungal mating proteins, and serotonin receptors.
 
 218 opsin records were mapped through UniRef50 to 40 records.
 211 T2R taste receptors were mapped to 45 records after UniRef50.
 There were 82 records for frizzled/smooth, of which 41 were cluster representitives after querying with UniRef50.
 114 were metabotropic glutamate recepters which became 44 after redundancy removal.
 In serotonin,91 original records were represented by 28 records.
+There were 13 fungal mating proteins, represented by 9 after UniRef50.
 
 
 
