typos fixed more methods added

--- a/chapter_multipassfolding.tex
+++ b/chapter_multipassfolding.tex
@@ -30,39 +30,6 @@ The prevailing idea about membrane insertion by the translocon is that the \gls{
 \label{fig:sequential-insertion}
 \end{figure}
 
-\subsection{Co-operative insertion}
-Multiple \gls{tmh}s in a nascent protein can be associated with the eukaryotic translocon simultaneously.
-It was shown that \gls{tmh}s can stay inassociation with the translocon in order to mediate integration of downstream \gls{tmh}s demonstrated by crosslinking analysis \cite{Sadlish2005, Cross2009}.
-Not only this, but it was shown that there is a direct interaction between the \gls{tmh}s; more recently \gls{ap}s were used to show pulling forces between a \gls{tmh} and more C-terminally located \gls{tmh} during the C-terminal \gls{tmh} membrane partitioning from the translocon \textit{in vivo} \cite{Cymer2013}.
-This could be facilitated during the probing of a \gls{tmh} from the translocon as the lateral gate ``cracks'' open in an intermediate stage before the \gls{tmh} satisfies the full hydrophobic requirements to open the gate fully, an intermediate stage observed in a SecY crystal structure \cite{Egea2010}.
-
-\subsubsection{GPCRs}
-
-\gls{gpcr}s are a diverse family of membrane surface receptors with 7 \gls{tmh} segments.
-GPCRs have long be known to be overrepresented among genomes \cite{Remm2000}.
-They have adapted to respond to a wide range of specific signals ranging from macromolecules to photons.
-The specific signal triggers a conformational change of the \gls{gpcr} that is translated across the membrane.
-\gls{gpcr}s have been associated with tumerigenesis \cite{OHayre2013}, metastasis \cite{Singh2015} and in cancers \cite{Bar-Shavit2016} and are a potential target for therapies \cite{Arakaki2018}.
-Their ubiquitous presence in cellular life and medical relevance makes them an important topic of study.
-
-Opsins are a group of light sensitive \gls{gpcr}s.
-It was shown by cross linking studies that opsin \gls{tmh}s 5-7 are retained in the \gls{er} translocon and only parition once biosynthesis is complete \cite{Ismail2008}.
-The timing of this partitioning is controlled by the hydrophobicity of the \gls{tmh}, not protein length or the relative position of the \gls{tmh} within the protein.
-Although artificially extending the C-terminal did not result release of the \gls{tmh}s, by replacing native \gls{tmh} 7 with a more hydrophobic \gls{tmh}, the speed of insertion was decreased.
-\gls{tmh}s 1-4 are inserted independently, and the 5-7 \gls{tmh}s partition into the membrane at the same time.
-
-\subsection{Voltage gated ion channels}
-
-Another example of cooperative \gls{tmh} insertion is that of the 3rd and 4th \gls{tmh} of the potassium channel (shaker family) which was shown to insert either sequentially or cotranslationally \cite{Zhang2007, Cymer2015}.
-This is especially notable in the case of KAT1, that is a plant K$_v$ channel that is thought to mediate long-term potassium influx into guard cells causing the stomata to open.
-In the case of KAT1, N-glycosylation of various mutant fusion KAT1 constructs revealed that there is no choice of sequential insertion since \gls{tmh} 3 and 4 have no insertion potential and no topogenic functions themselves \cite{Sato2002, Sato2003}.
-In \gls{tmh} 4 this is due to the charged residues making it relatively polar.
-However, previous experimentation in Kv1.3 had found that while \gls{tmh} 4 did not initiate insertion, it did have insertion potential, and that when constgructs contained multiple \gls{tmh}s, membrane insertion efficiency increased \cite{Tu2000}.
-Without the ability to stop the translation through the translocon and form a \gls{tmh}, it was suggested that a different means was needed than classic sequential insertion, and even that \gls{tmh} 3 and 4 are integrated by the translocon at the same time post-translationally, i.e the \gls{tmh}s are folded prior to insertion \cite{Sato2003}.
-They achieve this in part becase the previous \gls{tmh}s 1 and 2 form a firm ``base'' within the membrane environment.
-
-
-
 \subsection{Ribsomes in the biogenesis of membrane proteins.}
 Ribosomes translate mRNA sequences to amino acid chains and are present in all living cells, and indeed the ribosomal complexes presence and activity is for many used to define whether something is alive.
 They are a highly conserved RNA-protein complex with a multitude of accessory proteins and targetting factors.
@@ -96,9 +63,46 @@ This is attributed to the sporadic negative patches within the ribosomal exit tu
 
 The ribosome clearly has the potential to prefold motifs and small domains before translocon insertion.
 
+\subsection{Co-operative insertion}
+Multiple \gls{tmh}s in a nascent protein can be associated with the eukaryotic translocon simultaneously.
+It was shown that \gls{tmh}s can stay inassociation with the translocon in order to mediate integration of downstream \gls{tmh}s demonstrated by crosslinking analysis \cite{Sadlish2005, Cross2009}.
+Not only this, but it was shown that there is a direct interaction between the \gls{tmh}s; more recently \gls{ap}s were used to show pulling forces between a \gls{tmh} and more C-terminally located \gls{tmh} during the C-terminal \gls{tmh} membrane partitioning from the translocon \textit{in vivo} \cite{Cymer2013}.
+This could be facilitated during the probing of a \gls{tmh} from the translocon as the lateral gate ``cracks'' open in an intermediate stage before the \gls{tmh} satisfies the full hydrophobic requirements to open the gate fully, an intermediate stage observed in a SecY crystal structure \cite{Egea2010}.
+
+\subsubsection{GPCRs}
+
+\gls{gpcr}s are a diverse family of membrane surface receptors with 7 \gls{tmh} segments.
+GPCRs have long be known to be overrepresented among genomes \cite{Remm2000}.
+They have adapted to respond to a wide range of specific signals ranging from macromolecules to photons.
+The specific signal triggers a conformational change of the \gls{gpcr} that is translated across the membrane.
+\gls{gpcr}s have been associated with tumerigenesis \cite{OHayre2013}, metastasis \cite{Singh2015} and in cancers \cite{Bar-Shavit2016} and are a potential target for therapies \cite{Arakaki2018}.
+Their ubiquitous presence in cellular life and medical relevance makes them an important topic of study.
+
+Opsins are a group of light sensitive \gls{gpcr}s.
+It was shown by cross linking studies that opsin \gls{tmh}s 5-7 are retained in the \gls{er} translocon and only parition once biosynthesis is complete \cite{Ismail2008}.
+The timing of this partitioning is controlled by the hydrophobicity of the \gls{tmh}, not protein length or the relative position of the \gls{tmh} within the protein.
+Although artificially extending the C-terminal did not result release of the \gls{tmh}s, by replacing native \gls{tmh} 7 with a more hydrophobic \gls{tmh}, the speed of insertion was decreased.
+\gls{tmh}s 1-4 are inserted independently, and the 5-7 \gls{tmh}s partition into the membrane at the same time.
+
+\subsection{Voltage gated ion channels}
+
+Another example of cooperative \gls{tmh} insertion is that of the 3rd and 4th \gls{tmh} of the potassium channel (shaker family) which was shown to insert either sequentially or cotranslationally \cite{Zhang2007, Cymer2015}.
+This is especially notable in the case of KAT1, that is a plant K$_v$ channel that is thought to mediate long-term potassium influx into guard cells causing the stomata to open.
+In the case of KAT1, N-glycosylation of various mutant fusion KAT1 constructs revealed that there is no choice of sequential insertion since \gls{tmh} 3 and 4 have no insertion potential and no topogenic functions themselves \cite{Sato2002, Sato2003}.
+In \gls{tmh} 4 this is due to the charged residues making it relatively polar.
+However, previous experimentation in Kv1.3 had found that while \gls{tmh} 4 did not initiate insertion, it did have insertion potential, and that when constgructs contained multiple \gls{tmh}s, membrane insertion efficiency increased \cite{Tu2000}.
+Without the ability to stop the translation through the translocon and form a \gls{tmh}, it was suggested that a different means was needed than classic sequential insertion, and even that \gls{tmh} 3 and 4 are integrated by the translocon at the same time post-translationally, i.e the \gls{tmh}s are folded prior to insertion \cite{Sato2003}.
+They achieve this in part becase the previous \gls{tmh}s 1 and 2 form a firm ``base'' within the membrane environment.
+
+
 \section{Methods}
 \subsection{Datasets}
-\subsubsection{7TM lists}
+\subsubsection{Membrane protein families}
+This is not an exhaustive search among \gls{tmp}s for all examples of starkly polar \gls{tmh}s conserved among the family.
+Instead we show that there is precedent for several, but not all, protein families to contain polar helices and that these polar \gls{tmh}s are sequentially next to typically hydrophobic \gls{tmh}s.
+Analysis can only really be done if the number of \gls{tmh}s is conserved across the family.
+
+\subsubsection{GPCR subfamilies}
 The 7TMR list is a list distributed by UniProt containing G-receptor linked proteins available at \url{http://www.uniprot.org/docs/7tmrlist.txt} \cite{TheUniProtConsortium2014}.
 The entire list contains 3115 UniProt IDs which mapped to 3092 records on the date of download (12/9/2017).
 After removing redundant records using UniRef50 to identify cluster representitives, 1142 records made the final dataset.
