--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-% The 12pt option is required by the 2001/02 thesis regulations
+Trans% The 12pt option is required by the 2001/02 thesis regulations
 % Hacked together from the LaTeX template from the maths department of UoM
 
 %Magic latex symbol finder: http://detexify.kirelabs.org/classify.html
@@ -38,11 +38,11 @@
 \makeglossaries{}
 \newacronym{pm}{PM}{Plasma Membrane}
 \newacronym{md}{MD}{Molecular Dynamics}
-\newacronym{tm}{TM}{Trans-membrane}
-\newacronym{tmh}{TMH}{Trans-membrane Helix}
-\newacronym{tms}{TMS}{Trans-membrane Segment}
-\newacronym{tmp}{TMP}{Trans-membrane Protein}
-\newacronym{tmd}{TMD}{Trans-membrane Domain}
+\newacronym{tm}{TM}{Transmembrane}
+\newacronym{tmh}{TMH}{Transmembrane Helix}
+\newacronym{tms}{TMS}{Transmembrane Segment}
+\newacronym{tmp}{TMP}{Transmembrane Protein}
+\newacronym{tmd}{TMD}{Transmembrane Domain}
 \newacronym{er}{ER}{Endoplasmic Reticulum}
 \newacronym{ta}{TA}{Tail Anchor}
 \newacronym{gpi}{GPI}{Glycosylphosphatidylinositol}
@@ -87,11 +87,15 @@
 
 
 \prefacesection{Abstract}
-Non\---polar helices figure prominently in structural biology, from the first protein structure (myoglobin) through trans-membrane segments, to current work on recognition of protein trafficking and quality control. Trans-membrane \(\alpha\) helix containing proteins make around a quarter of all proteins, as well as two-thirds of drug targets, and contain some of the most critical proteins required for life as we know it. Yet they are fundamentally difficult to study experimentally. This is in part due to the very features that make them so biologically influential: their non\---polar trans-membrane helix regions. What is missing in the current literature is a nuanced understanding of the complexities of the helix composition beyond a hydrophobic region of around 20 residues. Currently, it is known that the properties of trans-membrane protein \(\alpha\) helices underpin membrane protein insertion mechanisms.
+Non\---polar helices figure prominently in structural biology, from the first protein structure (myoglobin) through transmembrane segments, to current work on recognition of protein trafficking and quality control.
+Transmembrane \(\alpha\) helix containing proteins make around a quarter of all proteins, as well as two-thirds of drug targets, and contain some of the most critical proteins required for life as we know it.
+Yet they are fundamentally difficult to study experimentally. This is in part due to the very features that make them so biologically influential: their non\---polar transmembrane helix regions.
+What is missing in the current literature is a nuanced understanding of the complexities of the helix composition beyond a hydrophobic region of around 20 residues.
+Currently, it is known that the properties of transmembrane protein \(\alpha\) helices underpin membrane protein insertion mechanisms.
 
-By leveraging large data-sets of trans-membrane proteins, this thesis is focused on characterising features of \(\alpha\) helices en masse, particularly regarding their topology, membrane\---protein interactions, and intramembrane protein interactions.
+By leveraging large data-sets of transmembrane proteins, this thesis is focused on characterising features of \(\alpha\) helices en masse, particularly regarding their topology, membrane\---protein interactions, and intramembrane protein interactions.
 
-In this thesis, I make the argument that there are different classifications of trans-membrane \(\alpha\) helices. These have markedly different evolutionary pressures, these different classes interact differently with the membrane, and each class serve the protein differently.
+In this thesis, I make the argument that there are different classifications of transmembrane \(\alpha\) helices. These have markedly different evolutionary pressures, these different classes interact differently with the membrane, and each class serve the protein differently.
 
 \prefacesection{Lay Abstract} %The lay abstract section is optional.
 
@@ -100,16 +104,26 @@ The barrier works by being chemically very different from both the outside envir
 The membrane is fatty, and because of that, the membrane repels water.
 
 Proteins are the molecular machinery that forms much of the cell structure and shape as well as carrying out many of the cell's routine tasks.
-Around a third of our genome codes for proteins that are permanently embedded in the membrane, but because these proteins are adapted for a life in the water repelling cell wall, they are very hard to study in laboratories which often rely on methods that hold proteins in water-based solutions.
+Around a third of our genome codes for proteins that are permanently embedded in the membrane.
+But because these membrane\--proteins are adapted for a life in the water repelling cell wall, they are very hard to study in laboratories which often rely on methods that hold proteins in water-based solutions.
 
 In this thesis, we focus particularly on the parts of the protein that are embedded in the water repelling cellular skin.
-Traditionally, these regions are hard to study, because we must first remove them from the cellular wall, which causes problems since the embedded regions also repel water and this often causes them to stick to one another, making them hard to work within a laboratory setting.
 
-We analyse thousands of proteins to further our understanding of electrical charges in the embedded regions and find that negative charge on the outside of the cell has been evolutionarily selected across bacteria, animals, and plants.
-This is especially true for regions that specifically anchor the protein into the cellular wall.
- Where the embedded regions have an additional function, for example ferrying something in or out of the cell, the negative charge ``bias'' can no longer be seen.
+%We computationally analysed thousands of proteins to further our understanding of electrical charges in the embedded regions and find that negative charge on the outside of the cell has been evolutionarily selected across bacteria, animals, and plants.
+%This is especially true for regions that specifically anchor the protein into the cellular wall.
+%Where the embedded regions have an additional function, for example ferrying something in or out of the cell, the negative charge ``bias'' can no longer be seen.
 
- This thesis demonstrates the radically different evolutionary story that transmembrane regions have compared to other proteins; the sacrifices they make for their stability in order to maintain their function, and their optimisation through evolutionary timescales to become mould to the membrane as best they can.
+We computationally analysed the biochemical make-up of thousands of proteins from openly available biological databases.
+
+This thesis demonstrates three features of membrane proteins:
+\begin{itemize}
+  \item the radically different evolutionary story that transmembrane regions have compared to other proteins; the sacrifices they make for their stability in order to maintain their function, and their optimisation through evolutionary timescales to adapt to the membrane as best they can.
+  \item these membrane embedded regions cooperate with one another to make sure the least stable, but functionally important, elements are correctly inserted into the membrane.
+  \item a distinct sub-group of membrane proteins that have a radically different membrane-insertion mechanism (tail-anchored proteins) have adaptations in their membrane regions depending on where they are in the cell.
+\end{itemize}
+
+These findings will go on to inform more specific studies about membrane proteins and hopefully provide some insight to the workings of disease in which these membrane proteins are a cause or a drug target.
+
 
  %But what is the point, what have we learned.
 
