chapter name edits, bug fixes

--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -1,4 +1,6 @@
-\chapter{Tail-Anchored Protein Datasets}
+\chapter{Collation and analysis of tail-anchored protein transmembrane helices reveals subcellular variation in flanking charged residue distribution and the transmembrane helix core hydrophobicity.}
+\chaptermark{Collation and analysis of tail-anchored...}
+
 \sloppy
 
 \section{Abstract}
