--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -1,5 +1,4 @@
-
-\chapter{The ``Negative-Outside'' Rule}
+\chapter{The ``Negative-Outside'' rule.}
 \sloppy
 The description of a~\gls{tmh} remains incomplete.
 The understanding of~\gls{tmp} topology is erroneous, and despite a wealth of structures, the general model of helix-helix and helix-lipid interactions remains speculative and requires a great deal of intensive analysis to generate a working model of a particular~\gls{tmp}.
@@ -1014,8 +1013,11 @@ Experiments include fusion proteins, posttranslational modifications, protease e
   \captionof{table}[The experimental evidences of TOPDB.]{\textbf{The experimental evidences of TOPDB.}
   The total number of experimental evidences that contribute to ExpAll according to the TOPDB database (More information at \url{http://topdb.enzim.hu/?m=exptype&mid=14}).
   ``*'' refers to the total number of a subsection being larger than the total of the subcategories, likely due to lack of annotation where ambiguous literature evidence is counted toward the total, but cannot be categorised further.}
+
     \resizebox{\textwidth}{!}{
+    \small
     \begin{tabular}{cp{5em}cp{5em}}
+
     \toprule
 
     \multicolumn{2}{p{10em}}{\textbf{Experiment}} & \multicolumn{1}{p{5em}}{\textbf{Bitopic (Single-pass)}} & \textbf{Polytopic (Multi-pass)} \\
