--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-Trans% The 12pt option is required by the 2001/02 thesis regulations
+% The 12pt option is required by the 2001/02 thesis regulations
 % Hacked together from the LaTeX template from the maths department of UoM
 
 %Magic latex symbol finder: http://detexify.kirelabs.org/classify.html
